components/operators/openshift-ai/instance-3.x/components/components-kserve-maas/maas-postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maas-postgres
  namespace: redhat-ods-applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maas-postgres
  template:
    metadata:
      labels:
        app: maas-postgres
    spec:
      containers:
      - name: postgres
        image: registry.redhat.io/rhel9/postgresql-15:latest
        ports:
        - containerPort: 5432
