components/operators/openshift-ai/instance-3.x/components/components-kserve-maas/maas-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maas-postgres
  namespace: redhat-ods-applications
spec:
  selector:
    app: maas-postgres
  ports:
  - port: 5432
    targetPort: 5432
